--- a/Index.html
+++ b/Index.html
@@ -132,7 +132,7 @@
     <a href="kursus.html">Kursus</a>
     <a href="about.html">Tentang Kami</a>
     <a href="beranda.html">Beranda</a>
-    <a href="pendaftaran.html/pendaftaran.html" class="registration-menu">Pendaftaran</a>
+    <a href="pendaftaran/pendaftaran.html" class="registration-menu">Pendaftaran</a>
 </div>
 
 <!-- Deskripsi "Belajar Informatika" dan gambar -->
