--- a/Index.html
+++ b/Index.html
@@ -127,11 +127,11 @@
 
 <div class="navbar">
     <span class="navbar-title">BELAJAR INFORMATIKA</span>
-    <a href="contact.html">Kontak</a>
-    <a href="blog.html">Blog</a>
-    <a href="kursus.html">Kursus</a>
-    <a href="about.html">Tentang Kami</a>
-    <a href="beranda.html">Beranda</a>
+    <a href="html/contact.html">Kontak</a>
+    <a href="html/blog.html">Blog</a>
+    <a href="html/kursus.html">Kursus</a>
+    <a href="html/about.html">Tentang Kami</a>
+    <a href="html/beranda.html">Beranda</a>
     <a href="pendaftaran/pendaftaran.html" class="registration-menu">Pendaftaran</a>
 </div>
 
